[package]
name = "pg_index_inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.7"
getopts = "0.2.21"
postgres-types = "0.2.6"
bytes = "1.6.0"
serde = { version = "1.0.201", features = ["derive"] }
handlebars = "5.1.2"
dirs = "5.0.1"
serde_json = "1.0.117"