[package]
name = "pg_index_inspector"
version = "0.1.0"
edition = "2021"
authors = ["Uddeshya Singh <singhuddeshyaofficial@gmail.com>"]
rust-version = "1.71.0"
description = "Postgres index inspection tool"
repository = "https://github.com/uds5501/postgres-page-inspector"
keywords = ["postgres", "indexes", "btrees", "databases", "distributed-system"]
categories = ["database"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.7"
postgres-types = "0.2.6"
bytes = "1.6.0"
serde = { version = "1.0.201", features = ["derive"] }
handlebars = "5.1.2"
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive"] }